--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       src="https://kit.fontawesome.com/e7127df6db.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" type="image/png" href="/assets/img/Cuppon.png" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="icon" type="image/png" href="assets/img/Cuppon.png" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>CUPPON</title>
   </head>
 
