--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
     <!--/NAVBAR-->
 
-    <section class="my-3 px-3">
+    <section class="my-3 px-3 ps-4 ms-2">
       <!--/CONTAINER-->
       <div class="container px-0">
         <div class="row">
